# differentiator

./: BinaryTree.cpp  BinaryTree.hpp  CMakeLists.txt  Differentiator.cpp  Differentiator.hpp  File.cpp  File.hpp  Main.cpp  README.md
